--- a/project/user question ans scraping.ipynb
+++ b/project/user question ans scraping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "id": "ambient-origin",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,16 @@
     "import requests as req\n",
     "from bs4 import BeautifulSoup as bs\n",
     "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "interpreted-personal",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get user ajent is possible by javascript \"\"\"\"\"\"\"\"\"\"navigator.userAgent\"\"\"\"\"\"\"\"\"\""
    ]
   },
   {
@@ -32,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 212,
-   "id": "refined-banner",
+   "id": "solar-amsterdam",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "id": "choice-patrol",
+   "id": "tamil-senate",
    "metadata": {},
    "outputs": [
     {
@@ -864,8 +874,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
-   "id": "soviet-regulation",
+   "execution_count": 218,
+   "id": "collect-double",
    "metadata": {},
    "outputs": [
     {
@@ -930,16 +940,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "centered-piano",
+   "execution_count": 1,
+   "id": "controlled-version",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "atlantic-petroleum",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function user_agents.parsers.parse(user_agent_string)>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parse\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fossil-mustang",
+   "id": "infectious-nutrition",
    "metadata": {},
    "outputs": [],
    "source": []
